#
# Qt-based interface module
#

qt5 = import('qt5')

include_dir = include_directories('.')

qt5_dep = dependency('qt5', modules : ['Core', 'Gui', 'Widgets', 'Svg'])

moc_headers = files(
    'input_manager.hpp',
    'extensions_manager.hpp',
    'menus.hpp',
    'actions_manager.hpp',
    'dialogs_provider.hpp',
#    'main_interface_win32.hpp',
    'recents.hpp',
    'main_interface.hpp',
    'util/animators.hpp',
    'util/pictureflow.hpp',
    'util/qmenuview.hpp',
    'util/timetooltip.hpp',
    'util/searchlineedit.hpp',
    'util/customwidgets.hpp',
    'util/input_slider.hpp',
    'util/qvlcapp.hpp',
    'managers/renderer_manager.hpp',
    'managers/addons_manager.hpp',
    'adapters/variables.hpp',
    'adapters/seekpoints.hpp',
    'styles/seekstyle.hpp',
    'adapters/chromaprint.hpp',
    'util/validators.hpp',
    'components/controller.hpp',
    'components/preferences_widgets.hpp',
    'components/interface_widgets.hpp',
    'components/simple_preferences.hpp',
    'components/complete_preferences.hpp',
    'components/extended_panels.hpp',
    'components/info_panels.hpp',
    'components/info_widgets.hpp',
    'components/controller_widget.hpp',
    'components/open_panels.hpp',
    'components/custom_menus.hpp',
    'dialogs/errors.hpp',
    'dialogs/external.hpp',
    'dialogs/playlist_dialog.hpp',
    'dialogs/epg.hpp',
    'dialogs/firstrun.hpp',
    'dialogs/mediainfo.hpp',
    'dialogs/gototime.hpp',
    'dialogs/plugins.hpp',
    'dialogs/toolbar.hpp',
    'dialogs/openurl.hpp',
    'dialogs/help.hpp',
    'dialogs/vlm.hpp',
    'dialogs/open.hpp',
    'dialogs/sout.hpp',
    'dialogs/bookmarks.hpp',
    'dialogs/extensions.hpp',
    'dialogs/messages.hpp',
    'dialogs/podcast_configuration.hpp',
    'dialogs/fingerprintdialog.hpp',
    'dialogs/extended.hpp',
    'dialogs/preferences.hpp',
    'dialogs/convert.hpp',
    'util/buttons/DeckButtonsLayout.hpp',
    'util/buttons/RoundButton.hpp',
    'util/buttons/BrowseButton.hpp',
    'components/playlist/playlist.hpp',
    'components/playlist/views.hpp',
    'components/playlist/selector.hpp',
    'components/playlist/vlc_model.hpp',
    'components/playlist/playlist_model.hpp',
    'components/playlist/standardpanel.hpp',
    'components/sout/sout_widgets.hpp',
    'components/sout/profile_selector.hpp',
    'components/epg/EPGRuler.hpp',
    'components/epg/EPGChannels.hpp',
    'components/epg/EPGView.hpp',
    'components/epg/EPGWidget.hpp',
    'components/epg/EPGProgram.hpp')

some_sources = files('main_interface.cpp',
    'menus.cpp',
    'dialogs_provider.cpp',
    'input_manager.cpp',
    'actions_manager.cpp',
    'extensions_manager.cpp',
    'managers/addons_manager.cpp',
    'managers/renderer_manager.cpp',
    'recents.cpp',
    'adapters/seekpoints.cpp',
    'adapters/chromaprint.cpp',
    'adapters/variables.cpp',
    'dialogs/playlist_dialog.cpp',
    'dialogs/bookmarks.cpp',
    'dialogs/mediainfo.cpp',
    'dialogs/extended.cpp',
    'dialogs/messages.cpp',
    'dialogs/epg.cpp',
    'dialogs/errors.cpp',
    'dialogs/external.cpp',
    'dialogs/plugins.cpp',
    'dialogs/preferences.cpp',
    'dialogs/sout.cpp',
    'dialogs/convert.cpp',
    'dialogs/help.cpp',
    'dialogs/gototime.cpp',
    'dialogs/toolbar.cpp',
    'dialogs/open.cpp',
    'dialogs/openurl.cpp',
    'dialogs/podcast_configuration.cpp',
    'dialogs/firstrun.cpp',
    'dialogs/extensions.cpp',
    'dialogs/fingerprintdialog.cpp',
    'dialogs/vlm.cpp',
    'components/extended_panels.cpp',
    'components/info_panels.cpp',
    'components/info_widgets.cpp',
    'components/preferences_widgets.cpp',
    'components/complete_preferences.cpp',
    'components/custom_menus.cpp',
    'components/simple_preferences.cpp',
    'components/open_panels.cpp',
    'components/interface_widgets.cpp',
    'components/controller.cpp',
    'components/controller_widget.cpp',
    'components/epg/EPGItem.cpp',
    'components/epg/EPGChannels.cpp',
    'components/epg/EPGProgram.cpp',
    'components/epg/EPGRuler.cpp',
    'components/epg/EPGView.cpp',
    'components/epg/EPGWidget.cpp',
    'components/playlist/views.cpp',
    'components/playlist/vlc_model.cpp',
    'components/playlist/playlist_model.cpp',
    'components/playlist/playlist.cpp',
    'components/playlist/standardpanel.cpp',
    'components/playlist/selector.cpp',
    'components/sout/profile_selector.cpp',
    'components/sout/sout_widgets.cpp',
    'components/playlist/playlist_item.cpp',
    'util/animators.cpp',
    'util/input_slider.cpp',
    'util/timetooltip.cpp',
    'util/customwidgets.cpp',
    'util/searchlineedit.cpp',
    'util/qmenuview.cpp',
    'util/pictureflow.cpp',
    'util/validators.cpp',
    'util/buttons/RoundButton.cpp',
    'util/buttons/DeckButtonsLayout.cpp',
    'util/buttons/BrowseButton.cpp',
    'util/qt_dirs.cpp',
    'util/imagehelper.cpp',
    'styles/seekstyle.cpp')

ui_sources = files(
    'ui/equalizer.ui',
    'ui/video_effects.ui',
    'ui/open_file.ui',
    'ui/open_disk.ui',
    'ui/open_net.ui',
    'ui/open_capture.ui',
    'ui/open.ui',
    'ui/podcast_configuration.ui',
    'ui/profiles.ui',
    'ui/sprefs_audio.ui',
    'ui/sprefs_input.ui',
    'ui/sprefs_interface.ui',
    'ui/sprefs_subtitles.ui',
    'ui/sprefs_video.ui',
    'ui/streampanel.ui',
    'ui/messages_panel.ui',
    'ui/about.ui',
    'ui/update.ui',
    'ui/sout.ui',
    'ui/vlm.ui',
    'ui/fingerprintdialog.ui')

qt5pre_files = qt5.preprocess(ui_files : ui_sources,
    moc_headers : moc_headers,
    qresources : files('vlc.qrc'))

qt_sources = files('qt.cpp')

vlc_modules += {
    'name' : 'qt',
    'sources' : [qt5pre_files, qt_sources, some_sources],
    'dependencies' : [qt5_dep],
    'include_directories' : include_dir
}
