#
# Qt-based interface module
#

qt5 = import('qt5')

include_dir = include_directories('.')

qt5_dep = dependency('qt5', modules : ['Core', 'Gui', 'Widgets', 'Svg'])

moc_headers = files(
    'qt.hpp',
    'recents.hpp',
    'components/info_widgets.hpp',
    'components/info_panels.hpp',
    'components/controller_widget.hpp',
    'components/mediacenter/mlartist.hpp',
    'components/mediacenter/mlnetworkmodel.hpp',
    'components/mediacenter/mlalbumtrack.hpp',
    'components/mediacenter/mlvideomodel.hpp',
    'components/mediacenter/mlgenremodel.hpp',
    'components/mediacenter/mcmedialib.hpp',
    'components/mediacenter/mlvideo.hpp',
    'components/mediacenter/mlgenre.hpp',
    'components/mediacenter/mlalbumtrackmodel.hpp',
    'components/mediacenter/mlhelper.hpp',
    'components/mediacenter/mlalbummodel.hpp',
    'components/mediacenter/mlalbum.hpp',
    'components/mediacenter/mlbasemodel.hpp',
    'components/mediacenter/mlqmltypes.hpp',
    'components/mediacenter/mlartistmodel.hpp',
    'components/interface_widgets.hpp',
    'components/custom_menus.hpp',
    'components/extended_panels.hpp',
    'components/navigation_history.hpp',
    'components/complete_preferences.hpp',
    'components/sout/profiles.hpp',
    'components/sout/sout_widgets.hpp',
    'components/sout/profile_selector.hpp',
    'components/preferences_widgets.hpp',
    'components/playlist/playlist_model.hpp',
    'components/playlist/playlist_controller_p.hpp',
    'components/playlist/playlist_common.hpp',
    'components/playlist/media.hpp',
    'components/playlist/playlist_item.hpp',
    'components/playlist/playlist_controller.hpp',
    'components/playlist/playlist_model_p.hpp',
    'components/simple_preferences.hpp',
    'components/open_panels.hpp',
    'components/player_controller.hpp',
    'components/voutwindow/qvoutwindow.hpp',
    'components/voutwindow/qvoutwindowdummy.hpp',
    'components/voutwindow/videosurface.hpp',
    'components/epg/EPGChannels.hpp',
    'components/epg/EPGWidget.hpp',
    'components/epg/EPGRuler.hpp',
    'components/epg/EPGView.hpp',
    'components/epg/EPGProgram.hpp',
    'components/epg/EPGItem.hpp',
    'components/recent_media_model.hpp',
    'components/player_controller_p.hpp',
    'components/dialogmodel.hpp',
    'components/controller.hpp',
    'components/aboutmodel.hpp',
    'components/qml_main_context.hpp',
    'dialogs_provider.hpp',
    'main_interface_win32.hpp',
    'styles/seekstyle.hpp',
    'util/buttons/BrowseButton.hpp',
    'util/buttons/DeckButtonsLayout.hpp',
    'util/buttons/RoundButton.hpp',
    'util/qvlcframe.hpp',
    'util/input_models.hpp',
    'util/animators.hpp',
    'util/qmleventfilter.hpp',
    'util/imagehelper.hpp',
    'util/registry.hpp',
    'util/customwidgets.hpp',
    'util/timetooltip.hpp',
    'util/validators.hpp',
    'util/qvlcapp.hpp',
    'util/singleton.hpp',
    'util/searchlineedit.hpp',
    'util/vlctick.hpp',
    'util/input_slider.hpp',
    'util/qt_dirs.hpp',
    'dialogs/open.hpp',
    'dialogs/convert.hpp',
    'dialogs/vlm.hpp',
    'dialogs/bookmarks.hpp',
    'dialogs/toolbar.hpp',
    'dialogs/plugins.hpp',
    'dialogs/firstrun.hpp',
    'dialogs/extensions.hpp',
    'dialogs/openurl.hpp',
    'dialogs/gototime.hpp',
    'dialogs/help.hpp',
    'dialogs/errors.hpp',
    'dialogs/extended.hpp',
    'dialogs/epg.hpp',
    'dialogs/messages.hpp',
    'dialogs/fingerprintdialog.hpp',
    'dialogs/podcast_configuration.hpp',
    'dialogs/mediainfo.hpp',
    'dialogs/sout.hpp',
    'dialogs/preferences.hpp',
    'menus.hpp',
    'managers/renderer_manager.hpp',
    'managers/addons_manager.hpp',
    'extensions_manager.hpp',
    'main_interface.hpp',
    'adapters/variables.hpp',
    'adapters/var_common_p.hpp',
    'adapters/var_choice_model.hpp',
    'adapters/chromaprint.hpp'
    )

some_sources = files(
    'main_interface.moc.cpp',
    'qt.cpp',
    'components/aboutmodel.moc.cpp',
    'components/open_panels.cpp',
    'components/recent_media_model.cpp',
    'components/controller_widget.moc.cpp',
    'components/info_widgets.cpp',
    'components/simple_preferences.cpp',
    'components/extended_panels.cpp',
    'components/mediacenter/mlartistmodel.moc.cpp',
    'components/mediacenter/mlalbummodel.moc.cpp',
    'components/mediacenter/mlqmltypes.moc.cpp',
    'components/mediacenter/mlvideo.cpp',
    'components/mediacenter/mlvideo.moc.cpp',
    'components/mediacenter/mlartist.moc.cpp',
    'components/mediacenter/mlbasemodel.moc.cpp',
    'components/mediacenter/mlbasemodel.cpp',
    'components/mediacenter/mlgenremodel.moc.cpp',
    'components/mediacenter/mlalbum.moc.cpp',
    'components/mediacenter/mcmedialib.cpp',
    'components/mediacenter/mlvideomodel.moc.cpp',
    'components/mediacenter/mlgenre.moc.cpp',
    'components/mediacenter/mlalbumtrackmodel.moc.cpp',
    'components/mediacenter/mlvideomodel.cpp',
    'components/mediacenter/mlnetworkmodel.moc.cpp',
    'components/mediacenter/mlalbumtrack.cpp',
    'components/mediacenter/mlalbum.cpp',
    'components/mediacenter/mlnetworkmodel.cpp',
    'components/mediacenter/mlartist.cpp',
    'components/mediacenter/mlgenre.cpp',
    'components/mediacenter/mlalbumtrackmodel.cpp',
    'components/mediacenter/mlgenremodel.cpp',
    'components/mediacenter/mlalbummodel.cpp',
    'components/mediacenter/mlalbumtrack.moc.cpp',
    'components/mediacenter/mcmedialib.moc.cpp',
    'components/mediacenter/mlartistmodel.cpp',
    'components/navigation_history.cpp',
    'components/preferences_widgets.moc.cpp',
    'components/aboutmodel.cpp',
    'components/qml_main_context.cpp',
    'components/info_panels.moc.cpp',
    'components/navigation_history.moc.cpp',
    'components/controller.cpp',
    'components/preferences_widgets.cpp',
    'components/controller_widget.cpp',
    'components/interface_widgets.moc.cpp',
    'components/info_panels.cpp',
    'components/complete_preferences.moc.cpp',
    'components/player_controller.cpp',
    'components/qml_main_context.moc.cpp',
    'components/player_controller.moc.cpp',
    'components/info_widgets.moc.cpp',
    'components/sout/sout_widgets.cpp',
    'components/sout/sout_widgets.moc.cpp',
    'components/sout/profile_selector.moc.cpp',
    'components/sout/profile_selector.cpp',
    'components/playlist/playlist_common.moc.cpp',
    'components/playlist/playlist_model.cpp',
    'components/playlist/playlist_controller.moc.cpp',
    'components/playlist/playlist_model.moc.cpp',
    'components/playlist/playlist_controller.cpp',
    'components/playlist/playlist_item.cpp',
    'components/playlist/playlist_common.cpp',
    'components/playlist/playlist_item.moc.cpp',
    'components/custom_menus.cpp',
    'components/custom_menus.moc.cpp',
    'components/dialogmodel.moc.cpp',
    'components/extended_panels.moc.cpp',
    'components/voutwindow/qvoutwindowdummy.cpp',
    'components/voutwindow/qvoutwindow.cpp',
    'components/voutwindow/qvoutwindowdummy.moc.cpp',
    'components/voutwindow/qvoutwindow.moc.cpp',
    'components/voutwindow/videosurface.moc.cpp',
    'components/voutwindow/videosurface.cpp',
    'components/epg/EPGChannels.moc.cpp',
    'components/epg/EPGProgram.moc.cpp',
    'components/epg/EPGWidget.cpp',
    'components/epg/EPGView.moc.cpp',
    'components/epg/EPGWidget.moc.cpp',
    'components/epg/EPGView.cpp',
    'components/epg/EPGRuler.moc.cpp',
    'components/epg/EPGItem.cpp',
    'components/epg/EPGProgram.cpp',
    'components/epg/EPGChannels.cpp',
    'components/epg/EPGRuler.cpp',
    'components/interface_widgets.cpp',
    'components/dialogmodel.cpp',
    'components/recent_media_model.moc.cpp',
    'components/simple_preferences.moc.cpp',
    'components/controller.moc.cpp',
    'components/open_panels.moc.cpp',
    'components/complete_preferences.cpp',
    'menus.cpp',
    'main_interface_win32.cpp',
    'styles/seekstyle.moc.cpp',
    'styles/seekstyle.cpp',
    'util/buttons/RoundButton.cpp',
    'util/buttons/DeckButtonsLayout.moc.cpp',
    'util/buttons/BrowseButton.cpp',
    'util/buttons/BrowseButton.moc.cpp',
    'util/buttons/DeckButtonsLayout.cpp',
    'util/buttons/RoundButton.moc.cpp',
    'util/customwidgets.moc.cpp',
    'util/validators.moc.cpp',
    'util/vlctick.cpp',
    'util/qmleventfilter.moc.cpp',
    'util/qt_dirs.cpp',
    'util/registry.cpp',
    'util/searchlineedit.cpp',
    'util/validators.cpp',
    'util/input_slider.cpp',
    'util/timetooltip.cpp',
    'util/input_slider.moc.cpp',
    'util/input_models.cpp',
    'util/vlctick.moc.cpp',
    'util/animators.cpp',
    'util/timetooltip.moc.cpp',
    'util/qvlcapp.moc.cpp',
    'util/customwidgets.cpp',
    'util/animators.moc.cpp',
    'util/imagehelper.cpp',
    'util/searchlineedit.moc.cpp',
    'util/input_models.moc.cpp',
    'util/qmleventfilter.cpp',
    'menus.moc.cpp',
    'dialogs/messages.moc.cpp',
    'dialogs/fingerprintdialog.moc.cpp',
    'dialogs/plugins.cpp',
    'dialogs/bookmarks.cpp',
    'dialogs/podcast_configuration.cpp',
    'dialogs/plugins.moc.cpp',
    'dialogs/toolbar.moc.cpp',
    'dialogs/toolbar.cpp',
    'dialogs/convert.moc.cpp',
    'dialogs/fingerprintdialog.cpp',
    'dialogs/epg.cpp',
    'dialogs/openurl.cpp',
    'dialogs/gototime.cpp',
    'dialogs/extended.moc.cpp',
    'dialogs/mediainfo.cpp',
    'dialogs/errors.cpp',
    'dialogs/help.moc.cpp',
    'dialogs/sout.cpp',
    'dialogs/openurl.moc.cpp',
    'dialogs/convert.cpp',
    'dialogs/extended.cpp',
    'dialogs/extensions.cpp',
    'dialogs/podcast_configuration.moc.cpp',
    'dialogs/vlm.cpp',
    'dialogs/gototime.moc.cpp',
    'dialogs/messages.cpp',
    'dialogs/sout.moc.cpp',
    'dialogs/help.cpp',
    'dialogs/firstrun.cpp',
    'dialogs/extensions.moc.cpp',
    'dialogs/preferences.cpp',
    'dialogs/mediainfo.moc.cpp',
    'dialogs/open.moc.cpp',
    'dialogs/open.cpp',
    'dialogs/firstrun.moc.cpp',
    'dialogs/vlm.moc.cpp',
    'dialogs/epg.moc.cpp',
    'dialogs/preferences.moc.cpp',
    'dialogs/errors.moc.cpp',
    'dialogs/bookmarks.moc.cpp',
    'recents.cpp',
    'managers/renderer_manager.cpp',
    'managers/addons_manager.moc.cpp',
    'managers/renderer_manager.moc.cpp',
    'managers/addons_manager.cpp',
    'extensions_manager.cpp',
    'adapters/variables.moc.cpp',
    'adapters/var_choice_model.moc.cpp',
    'adapters/chromaprint.moc.cpp',
    'adapters/chromaprint.cpp',
    'adapters/var_choice_model.cpp',
    'adapters/variables.cpp',
    'extensions_manager.moc.cpp',
    'main_interface.cpp',
    'dialogs_provider.cpp',
    'resources.cpp',
    'vlc-qt-check.cpp',
)

ui_sources = files(
    'ui/equalizer.ui',
    'ui/video_effects.ui',
    'ui/open_file.ui',
    'ui/open_disk.ui',
    'ui/open_net.ui',
    'ui/open_capture.ui',
    'ui/open.ui',
    'ui/podcast_configuration.ui',
    'ui/profiles.ui',
    'ui/sprefs_audio.ui',
    'ui/sprefs_input.ui',
    'ui/sprefs_interface.ui',
    'ui/sprefs_subtitles.ui',
    'ui/sprefs_video.ui',
    'ui/streampanel.ui',
    'ui/messages_panel.ui',
    'ui/about.ui',
    'ui/update.ui',
    'ui/sout.ui',
    'ui/vlm.ui',
    'ui/fingerprintdialog.ui')

qt5pre_files = qt5.preprocess(ui_files : ui_sources,
    moc_headers : moc_headers,
    qresources : files('vlc.qrc'))

qt_sources = files('qt.cpp')

vlc_modules += {
    'name' : 'qt',
    'sources' : [qt5pre_files, qt_sources, some_sources],
    'dependencies' : [qt5_dep],
    'include_directories' : include_dir
}
